--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,21 +56,19 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\__Scripts\Layout.cs" />
     <Compile Include="Assets\__Scripts\Card.cs" />
-    <Compile Include="Assets\__Scripts\CardProspector.cs" />
     <Compile Include="Assets\__Scripts\Menu.cs" />
     <Compile Include="Assets\__Scripts\FloatingScore.cs" />
     <Compile Include="Assets\__Scripts\Utils.cs" />
     <Compile Include="Assets\__Scripts\VolumeMusic.cs" />
     <Compile Include="Assets\__Scripts\PT_XMLReader.cs" />
     <Compile Include="Assets\__Scripts\Scoreboard.cs" />
-    <Compile Include="Assets\__Scripts\Prospector.cs" />
     <Compile Include="Assets\__Scripts\Deck.cs" />
     <Compile Include="Assets\__Scripts\ScoreManager.cs" />
     <Compile Include="Assets\__Scripts\HotKeys.cs" />
     <Compile Include="Assets\__Scripts\Bartok.cs" />
     <Compile Include="Assets\__Scripts\CardBartok.cs" />
+    <Compile Include="Assets\__Scripts\BartokLayout.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Resources\LayoutXML.xml" />
