--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\__Scripts\ScoreManager.cs" />
     <Compile Include="Assets\__Scripts\HotKeys.cs" />
     <Compile Include="Assets\__Scripts\Player.cs" />
+    <Compile Include="Assets\__Scripts\TurnLigh.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Resources\LayoutXML.xml" />
